[tool.poetry]
name = "opencv_read_weather"
version = "0.1.0"
description = ""
authors = ["Dion Boles"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
httpx = "^0.23.0"
beautifulsoup4 = "^4.11.1"
opencv-python = "^4.5.5"
mypy = "^0.960"
black = "^22.3.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
